modified:   .gitmodules 	deleted:    bundle/git-gutter-vim 	new file:   bundle/tagbar-phpctags 	modified:   bundle/cscope (modified content) 	modified:   bundle/drawit (untracked content) 	modified:   bundle/minibufexpl (untracked content) 	modified:   bundle/omnicppcomplete (untracked content) 	modified:   bundle/srcexpl (untracked content) 	modified:   bundle/syntastic (modified content) 	modified:   bundle/taglist (untracked content) 	modified:   vimrc

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "bundle/tagbar"]
 	path = bundle/tagbar
     url = git://github.com/majutsushi/tagbar
+[submodule "bundle/tagbar-phpctags"]
+	path = bundle/tagbar-phpctags
+	url = git://github.com/techlivezheng/tagbar-phpctags.git
