modified:   .gitmodules 	new file:   bundle/phpctags 	modified:   bundle/cscope (modified content) 	modified:   bundle/drawit (untracked content) 	modified:   bundle/minibufexpl (untracked content) 	modified:   bundle/omnicppcomplete (untracked content) 	modified:   bundle/srcexpl (untracked content) 	modified:   bundle/syntastic (modified content) 	modified:   bundle/taglist (untracked content) 	modified:   vimrc

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "bundle/tagbar-phpctags"]
 	path = bundle/tagbar-phpctags
 	url = git://github.com/techlivezheng/tagbar-phpctags.git
+[submodule "bundle/phpctags"]
+	path = bundle/phpctags
+	url = git://github.com/techlivezheng/phpctags.git
