--- a/.gitmodules
+++ b/.gitmodules
@@ -60,4 +60,7 @@
 	url = git://github.com/Lokaltog/vim-powerline.git
 [submodule "bundle/command-t"]
 	path = bundle/command-t
-	url = git://github.com/wincent/Command-T.git
+    url = git://github.com/wincent/Command-T.git
+[submodule "bundle/vim-gitgutter"]
+    path = bundle/vim-gitgutter
+    url = git://github.com/airblade/vim-gitgutter.git 
