modified:   .gitmodules 	new file:   bundle/matchit

--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "bundle/vim-gitgutter"]
     path = bundle/vim-gitgutter
     url = git://github.com/airblade/vim-gitgutter.git 
+[submodule "bundle/matchit"]
+	path = bundle/matchit
+	url = git://github.com/vim-scripts/matchit.zip.git
