modified:   .gitmodules 	modified:   bundle/minibufexpl 	modified:   bundle/phpctags 	modified:   bundle/syntastic 	modified:   bundle/tagbar 	modified:   bundle/tagbar-phpctags 	new file:   bundle/vim-markdown 	new file:   bundle/vim-voom 	modified:   vimrc 	modified:   bundle/vim-voom (untracked content)

--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,9 @@
 [submodule "bundle/omnicppcomplete"]
 	path = bundle/omnicppcomplete
 	url = git://github.com/vim-scripts/OmniCppComplete.git
+[submodule "bundle/vim-voom"]
+	path = bundle/vim-voom
+	url = https://github.com/vim-scripts/VOoM.git
+[submodule "bundle/vim-markdown"]
+	path = bundle/vim-markdown
+	url = https://github.com/plasticboy/vim-markdown.git
