--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "bundle/python-mode"]
 	path = bundle/python-mode
 	url = https://github.com/klen/python-mode.git
+[submodule "bundle/w3m"]
+	path = bundle/w3m
+	url = https://github.com/yuratomo/w3m.vim.git
