--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "bundle/vim-less"]
 	path = bundle/vim-less
 	url = https://github.com/groenewege/vim-less.git
+[submodule "bundle/awk-support"]
+	path = bundle/awk-support
+	url = https://github.com/vim-scripts/awk-support.vim.git
