--- a/.gitmodules
+++ b/.gitmodules
@@ -46,9 +46,6 @@
 [submodule "bundle/vim-powerline"]
 	path = bundle/vim-powerline
 	url = git://github.com/Lokaltog/vim-powerline.git
-[submodule "bundle/command-t"]
-	path = bundle/command-t
-    url = git://github.com/wincent/Command-T.git
 [submodule "bundle/vim-gitgutter"]
     path = bundle/vim-gitgutter
     url = git://github.com/airblade/vim-gitgutter.git 
@@ -100,3 +97,6 @@
 [submodule "bundle/align"]
 	path = bundle/align
 	url = https://github.com/vim-scripts/Align.git
+[submodule "bundle/ctrlp"]
+	path = bundle/ctrlp
+	url = https://github.com/kien/ctrlp.vim.git
