modified:   .gitmodules 	new file:   bundle/dockerfile-vim 	modified:   bundle/clang-commplete (new commits) 	modified:   bundle/emmet-vim (new commits) 	modified:   bundle/syntastic (new commits) 	modified:   bundle/tagbar (new commits) 	modified:   bundle/vim-gitgutter (new commits) 	modified:   bundle/vim-pathogen (new commits)

--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,6 @@
 [submodule "bundle/ctrlp"]
 	path = bundle/ctrlp
 	url = https://github.com/kien/ctrlp.vim.git
+[submodule "bundle/dockerfile-vim"]
+	path = bundle/dockerfile-vim
+	url = https://github.com/ekalinin/Dockerfile.vim.git
