--- a/.gitmodules
+++ b/.gitmodules
@@ -118,3 +118,6 @@
 [submodule "bundle/ag-vim"]
 	path = bundle/ag-vim
 	url = https://github.com/rking/ag.vim.git
+[submodule "bundle/ctrlsf-vim"]
+	path = bundle/ctrlsf-vim
+	url = https://github.com/dyng/ctrlsf.vim.git
