--- a/.gitmodules
+++ b/.gitmodules
@@ -121,3 +121,9 @@
 [submodule "bundle/ctrlsf-vim"]
 	path = bundle/ctrlsf-vim
 	url = https://github.com/dyng/ctrlsf.vim.git
+[submodule "bundle/vim-go"]
+	path = bundle/vim-go
+	url = https://github.com/fatih/vim-go.git
+[submodule "bundle/vim-gocode"]
+	path = bundle/vim-gocode
+	url = https://github.com/Blackrush/vim-gocode.git
