modified:   .gitmodules 	new file:   bundle/vim-lua-ftplugin 	new file:   bundle/vim-misc 	modified:   vimrc

--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,9 @@
 [submodule "bundle/vim-dirdiff"]
 	path = bundle/vim-dirdiff
 	url = git://github.com/will133/vim-dirdiff
+[submodule "bundle/vim-lua-ftplugin"]
+	path = bundle/vim-lua-ftplugin
+	url = https://github.com/xolox/vim-lua-ftplugin.git
+[submodule "bundle/vim-misc"]
+	path = bundle/vim-misc
+	url = https://github.com/xolox/vim-misc.git
