modified:   .gitmodules 	modified:   bundle/ag-vim 	deleted:    bundle/clang-commplete 	new file:   bundle/clang_complete 	modified:   bundle/ctrlp 	modified:   bundle/ctrlsf-vim 	modified:   bundle/dockerfile-vim 	modified:   bundle/emmet-vim 	modified:   bundle/neco-ghc 	modified:   bundle/nerdtree 	modified:   bundle/phpctags 	modified:   bundle/syntastic 	modified:   bundle/vim-airline 	modified:   bundle/vim-erlang-tags 	modified:   bundle/vim-fugitive 	modified:   bundle/vim-gitgutter 	modified:   bundle/vim-go 	modified:   bundle/vim-less 	modified:   bundle/vim-markdown 	modified:   bundle/vim-orgmode 	modified:   bundle/vim-pathogen 	modified:   bundle/vim-slime 	modified:   bundle/vimproc

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,9 +7,6 @@
 [submodule "bundle/nerdtree"]
 	path = bundle/nerdtree
 	url = git://github.com/scrooloose/nerdtree.git
-[submodule "bundle/clang-commplete"]
-	path = bundle/clang-commplete
-	url = git://github.com/Rip-Rip/clang_complete.git
 [submodule "bundle/drawit"]
 	path = bundle/drawit
 	url = git://github.com/vim-scripts/DrawIt.git
@@ -142,3 +139,6 @@
 [submodule "bundle/vim-signature"]
 	path = bundle/vim-signature
 	url = https://github.com/kshenoy/vim-signature.git
+[submodule "bundle/clang_complete"]
+	path = bundle/clang_complete
+	url = https://github.com/Rip-Rip/clang_complete.git
