--- a/.gitmodules
+++ b/.gitmodules
@@ -142,3 +142,6 @@
 [submodule "bundle/clang_complete"]
 	path = bundle/clang_complete
 	url = https://github.com/Rip-Rip/clang_complete.git
+[submodule "bundle/unite-vim"]
+	path = bundle/unite-vim
+	url = https://github.com/Shougo/unite.vim.git
