--- a/.gitmodules
+++ b/.gitmodules
@@ -109,9 +109,6 @@
 [submodule "bundle/vim-orgmode"]
     path = bundle/vim-orgmode
     url = https://github.com/jceb/vim-orgmode.git
-[submodule "bundle/ag-vim"]
-    path = bundle/ag-vim
-    url = https://github.com/rking/ag.vim.git
 [submodule "bundle/ctrlsf-vim"]
     path = bundle/ctrlsf-vim
     url = https://github.com/dyng/ctrlsf.vim.git
@@ -154,3 +151,6 @@
 [submodule "bundle/asyncrun"]
 	path = bundle/asyncrun
 	url = https://github.com/skywind3000/asyncrun.vim
+[submodule "bundle/ack.vim"]
+	path = bundle/ack.vim
+	url = https://github.com/mileszs/ack.vim
