--- a/.gitmodules
+++ b/.gitmodules
@@ -157,3 +157,6 @@
 [submodule "bundle/rust.vim"]
 	path = bundle/rust.vim
 	url = https://github.com/rust-lang/rust.vim.git
+[submodule "bundle/vim-systemtap"]
+	path = bundle/vim-systemtap
+	url = https://github.com/nickhutchinson/vim-systemtap.git
